Add script to retrieve referral code from URL

--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
-<!DOCTYPE html>
+<script>
+  const urlParams = new URLSearchParams(window.location.search);
+  const refCodeFromUrl = urlParams.get("ref") || "";
+</script><!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
