Add referral input and copy button to index.html

--- a/index.html
+++ b/index.html
@@ -415,3 +415,6 @@ fetch(`/api/me?phone=${loggedInPhone}`)
     alert("Referral link copied!");
   }
 </script>
+<input id="refInput" type="text" placeholder="Your referral code" />
+
+<button id="copyBtn">Copy Link</button>
